# Financial-QA-10k-RAG

./: .gitignore  README.md  pyproject.toml
docs/: phase1_data_engineering.md  phase2_dual_indexing.md  phase3_hybrid_search.md  phase4_reranking_generation.md  phase5_evaluation.md  phase6_deployment.md
scripts/: process_data.py
src/: __init__.py
src/data_engineering/: __init__.py  context_processor.py  csv_parser.py  output_formatter.py  quality_validator.py  text_cleaner.py
